tests/ui/traits/const-traits/issue-92111.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/issue-92111.rs:20:22
   |
LL | const fn a<T: ~const Destruct>(t: T) {}
   |                      ^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/issue-92111.rs:20:22
   |
LL | const fn a<T: ~const Destruct>(t: T) {}
   |                      ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> $DIR/issue-92111.rs:20:32
   |
LL | const fn a<T: ~const Destruct>(t: T) {}
   |                                ^      - value is dropped here
   |                                |
   |                                the destructor for this type cannot be evaluated in constant functions

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0493`.
